// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ダメージ反射でHPが0になった場合は引き分け: draw 1`] = `
[
  {
    "activePlayerId": "attacker",
    "effect": {
      "attacker": "attacker",
      "attackerBattery": 2,
      "defenderBattery": 0,
      "name": "BatteryDeclaration",
      "originalBatteryOfAttacker": 2,
      "originalBatteryOfDefender": 0,
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [
            {
              "damage": 5000,
              "effect": "Lightning",
              "period": {
                "remainingTurn": 1,
                "type": "TurnLimit",
              },
              "type": "TryReflect",
            },
          ],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "attacker",
    "effect": {
      "attacker": "attacker",
      "isDeath": true,
      "name": "Battle",
      "result": {
        "damage": 9999,
        "name": "CriticalHit",
      },
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [
            {
              "damage": 5000,
              "effect": "Lightning",
              "period": {
                "remainingTurn": 1,
                "type": "TurnLimit",
              },
              "type": "TryReflect",
            },
          ],
          "enableBurst": true,
          "hp": -6999,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "attacker",
    "effect": {
      "damage": 5000,
      "damagedPlayer": "attacker",
      "effect": "Lightning",
      "isDeath": true,
      "name": "Reflect",
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": -2000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [
            {
              "damage": 5000,
              "effect": "Lightning",
              "period": {
                "remainingTurn": 1,
                "type": "TurnLimit",
              },
              "type": "TryReflect",
            },
          ],
          "enableBurst": true,
          "hp": -6999,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "attacker",
    "effect": {
      "name": "GameEnd",
      "result": {
        "type": "EvenMatch",
      },
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": -2000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [
            {
              "damage": 5000,
              "effect": "Lightning",
              "period": {
                "remainingTurn": 1,
                "type": "TurnLimit",
              },
              "type": "TryReflect",
            },
          ],
          "enableBurst": true,
          "hp": -6999,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
]
`;

exports[`戦闘したが、相手を倒しきれなかったのでゲーム続行: continue-game 1`] = `
[
  {
    "activePlayerId": "attacker",
    "effect": {
      "attacker": "attacker",
      "attackerBattery": 2,
      "defenderBattery": 1,
      "name": "BatteryDeclaration",
      "originalBatteryOfAttacker": 2,
      "originalBatteryOfDefender": 1,
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 4,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "attacker",
    "effect": {
      "attacker": "attacker",
      "isDeath": false,
      "name": "Battle",
      "result": {
        "damage": 2000,
        "name": "NormalHit",
      },
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 4,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 1000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "attacker",
    "effect": {
      "battleResult": {
        "damage": 2000,
        "name": "NormalHit",
      },
      "defender": "defender",
      "name": "RightItself",
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 4,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 1000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "attacker",
    "effect": {
      "endArmdozerEffects": [],
      "name": "UpdateRemainingTurn",
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 4,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 1000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "defender",
    "effect": {
      "name": "TurnChange",
      "recoverBattery": 3,
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 1000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "defender",
    "effect": {
      "name": "InputCommand",
      "players": [
        {
          "command": [
            {
              "battery": 0,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 1,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 2,
              "type": "BATTERY_COMMAND",
            },
            {
              "type": "BURST_COMMAND",
            },
            {
              "type": "PILOT_SKILL_COMMAND",
            },
          ],
          "playerId": "attacker",
          "selectable": true,
        },
        {
          "command": [
            {
              "battery": 0,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 1,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 2,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 3,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 4,
              "type": "BATTERY_COMMAND",
            },
            {
              "battery": 5,
              "type": "BATTERY_COMMAND",
            },
            {
              "type": "BURST_COMMAND",
            },
            {
              "type": "PILOT_SKILL_COMMAND",
            },
          ],
          "playerId": "defender",
          "selectable": true,
        },
      ],
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 5,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 1000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
]
`;

exports[`攻撃で防御側のHPを0以下にした場合、ゲームが終了する: death 1`] = `
[
  {
    "activePlayerId": "attacker",
    "effect": {
      "attacker": "attacker",
      "attackerBattery": 2,
      "defenderBattery": 1,
      "name": "BatteryDeclaration",
      "originalBatteryOfAttacker": 2,
      "originalBatteryOfDefender": 1,
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 4,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 100,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "attacker",
    "effect": {
      "attacker": "attacker",
      "isDeath": true,
      "name": "Battle",
      "result": {
        "damage": 2000,
        "name": "NormalHit",
      },
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 4,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": -1900,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
  {
    "activePlayerId": "attacker",
    "effect": {
      "name": "GameEnd",
      "result": {
        "type": "GameOver",
        "winner": "attacker",
      },
    },
    "players": [
      {
        "armdozer": {
          "battery": 2,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": 3000,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "attacker",
      },
      {
        "armdozer": {
          "battery": 4,
          "burst": {
            "recoverBattery": 0,
            "turnStartBatteryCorrect": 0,
            "type": "RecoverBattery",
          },
          "effects": [],
          "enableBurst": true,
          "hp": -1900,
          "id": "id",
          "maxBattery": 5,
          "maxHp": 3000,
          "name": "name",
          "power": 2000,
          "speed": 2000,
        },
        "pilot": {
          "enableSkill": true,
          "id": "EMPTY_PLAYER",
          "name": "名無し",
          "skill": {
            "recoverBattery": 2,
            "type": "RecoverBatterySkill",
          },
        },
        "playerId": "defender",
      },
    ],
  },
]
`;
